--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>My App</title>
+    <title>Even or Odd</title>
 </head>
 
 <body>
     <header>
-        <h1>My App</h1>
+        <h1>Even or Odd</h1>
         <img src="assets/big-logo.png" />
     </header>
     
@@ -28,11 +28,12 @@
         <div>
             <div>
         <section class="center-column">
-                <input id="evenodd">
+                <input id='even-odd'>
             </section>
             </div>
+            <div id = 'answer'>Even or Odd?</div>
             <div>
-                <button id="btn">?</button>
+                <button id="input-btn">?</button>
             </div>
         </section>
     </div>
