wrote extra function

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
         <div>
             <section>
-                <img src ="assets/thumbs up.png" id="even-pic" class='hidden'>
+                <img src ="assets/thumbs up.png" id="even-pic" class='hidden' id= 'thumbs-up'>
                 
             </section>
         </div>
