played with functions

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
     <div>
         <section>
-            <img src = "assets/thumbs_down.png" id="odd-pic" class = 'hidden2'>
+            <img src = "assets/thumbs_down.png" id="odd-pic" class = 'hidden'>
         </section>
     </div>
     </div>
